@@ -1,7 +1,10 @@
 devel
 -----
 
-* Make the `--version` and `--version-json` commands usable in arangobackup
+* Removed an invalid assertion that could be triggered during chaos testing in
+  maintainer mode.
+
+* Made the `--version` and `--version-json` commands usable in arangobackup
   when no positional argument (operation type) was specified. Previously,
   arangobackup insisted on specifying the operation type alongside the
   `--version` or `--version-json` commands.
